# TWSimulator

./: Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml
.devcontainer/: .env.example  .gitignore  README.md  devcontainer.json  docker-compose.yml  launch.json  setup.sh  tasks.json
src/: lib.rs
src/models/: damage.rs  equipment.rs  mod.rs  monster.rs
src/services/: equipment_detector.rs  image_processor.rs  mod.rs
src/utils/: format.rs  mod.rs  storage.rs
www/: index.html  jsconfig.json  main.js  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
www/pkg/: README.md  package.json  twsimulator.d.ts  twsimulator.js  twsimulator_bg.wasm  twsimulator_bg.wasm.d.ts
www/src/: App.css  App.tsx  main.tsx  types.d.ts
www/src/api/: monsters.ts
www/src/components/damage/: DamageResult.css  DamageResult.tsx
www/src/components/equipment/: EquipmentPanel.css  EquipmentPanel.tsx
www/src/components/image/: ImageUploader.css  ImageUploader.tsx
www/src/components/monster/: MonsterDetailModal.css  MonsterDetailModal.tsx  MonsterSelector.css  MonsterSelector.tsx
www/src/types/: models.ts
