[package]
name = "twsimulator"
version = "0.1.0"
edition = "2021"
description = "TalesWeaver damage calculation simulator"
authors = ["TW Simulator Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM関連
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "File",
    "FileList",
    "FileReader",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "ImageData",
    "Window",
    "console",
    "CssStyleDeclaration",
    "DomRect",
    "Event",
    "EventTarget",
    "HtmlSelectElement",
    "Node",
    "Performance",
    "Storage",
    "Location",
] }

# ロギング
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"

# 画像処理
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
] }
base64 = "0.21"

# OCR関連
tesseract = { version = "0.14", optional = true }

# シリアライズ/デシリアライズ
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# その他ユーティリティ
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js", "wasm-bindgen"] }
anyhow = "1.0"
thiserror = "1.0"

# 新しい依存関係
serde-wasm-bindgen = "0.6"

[features]
default = ["web"]
web = []
native = ["tesseract"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
